--- a/Kalkulator2/app/src/main/res/layout/activity_main.xml
+++ b/Kalkulator2/app/src/main/res/layout/activity_main.xml
@@ -92,7 +92,7 @@
             android:id="@+id/rozszerzone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
+            android:layout_gravity="center"
             android:layout_marginTop="250dp"
             android:hint="@string/rozszerzone"
             android:onClick="rozszerzone"
